--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <!-- WRAPPER -->
 <div class="wrapper animsition">
     <!--========== HEADER TRANSPARENT ==========-->
-    <header class="header-transparent header-transparent-bb navbar-fixed-top header-sticky">
+    <header class=" navbar-fixed-top header-sticky">
 
     </header>
     <!--========== END HEADER TRANSPARENT ==========-->
